Update all test to use WebElement not By