@@ -1,7 +1,6 @@
 package demoqa.pages.bookstore;
 
 import demoqa.base.BasePage;
-import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
@@ -16,35 +15,59 @@ import java.util.List;
 import static utilities.JavaScriptUtility.scrollToElementJS;
 
 public class BooksPage extends BasePage {
-    private final By nextButton = By.xpath("//button[contains(.,'Next')]");
-    private final By previousButton = By.xpath("//button[contains(.,'Previous')]");
-    private final By noRowsFound = By.className("rt-noData");
-    private final By bookStoreApplication = By.xpath("//div[@class='header-text'][contains(.,'Book Store Application')]");
-    private final By collapseDiv = By.xpath("//div[contains(@class,'element-list collapse')]");
-    private final By title = By.xpath("(//div[contains(@class,'rt-resizable-header-content')])[2]");
-    private final By author = By.xpath("(//div[contains(@class,'rt-resizable-header-content')])[3]");
+    @FindBy(xpath = "//button[contains(.,'Next')]")
+    private WebElement nextButton;
+
+    @FindBy(xpath = "//button[contains(.,'Previous')]")
+    private WebElement previousButton;
+
+    @FindBy(className = "rt-noData")
+    private WebElement noRowsFound;
+
+    @FindBy(xpath = "//div[@class='header-text'][contains(.,'Book Store Application')]")
+    private WebElement bookStoreApplication;
+
+    @FindBy(xpath = "//div[contains(@class,'element-list collapse')]")
+    private WebElement collapseDiv;
+
+    @FindBy(xpath = "(//div[contains(@class,'rt-resizable-header-content')])[2]")
+    private WebElement title;
+
+    @FindBy(xpath = "(//div[contains(@class,'rt-resizable-header-content')])[3]")
+    private WebElement author;
+
     @FindBy(xpath = "//span[@class='text'][contains(.,'Login')]")
-    WebElement loginLink;
+    private WebElement loginLink;
+
     @FindBy(xpath = "//span[@class='text'][contains(.,'Book Store')]")
-    WebElement bookStoreLink;
+    private WebElement bookStoreLink;
+
     @FindBy(xpath = "//span[@class='text'][contains(.,'Profile')]")
-    WebElement profileLink;
+    private WebElement profileLink;
+
     @FindBy(xpath = "//span[contains(.,'Book Store API')]")
-    WebElement BookStoreAPILink;
+    private WebElement bookStoreAPILink;
+
     @FindBy(id = "searchBox")
-    WebElement searchBox;
+    private WebElement searchBox;
+
     @FindBy(id = "basic-addon2")
-    WebElement searchIcon;
+    private WebElement searchIcon;
+
     @FindBy(id = "login")
-    WebElement loginButton;
+    private WebElement loginButton;
+
     @FindBy(className = "rt-tr")
-    WebElement topRowTable;
+    private WebElement topRowTable;
+
     @FindBy(className = "rt-tr-group")
-    List<WebElement> allRows;
+    private List<WebElement> allRows;
+
     @FindBy(xpath = "//select")
-    WebElement rowPerPage;
+    private WebElement rowPerPage;
+
     @FindBy(xpath = "(//div[contains(@class,'rt-resizable-header-content')])[4]")
-    WebElement publisher;
+    private WebElement publisher;
 
     public BooksPage(WebDriver driver) {
         super(driver);
@@ -52,11 +75,11 @@ public class BooksPage extends BasePage {
     }
 
     public void clickTitle() {
-        click(title);
+        title.click();
     }
 
     public void clickAuthor() {
-        click(author);
+        author.click();
     }
 
     public void clickPublisher() {
@@ -64,21 +87,21 @@ public class BooksPage extends BasePage {
     }
 
     public void clickNextButton() {
-        click(nextButton);
+        nextButton.click();
     }
 
     public void clickPreviousButton() {
-        click(previousButton);
+        previousButton.click();
     }
 
     public boolean checkPreviousButtonIsActive() {
         scrollToElementJS(previousButton);
-        return find(previousButton).isEnabled();
+        return previousButton.isEnabled();
     }
 
     public boolean checkNextButtonIsActive() {
-        scrollToElementJS(previousButton);
-        return find(nextButton).isEnabled();
+        scrollToElementJS(nextButton);
+        return nextButton.isEnabled();
     }
 
     public void chooseBooksPerPage(String booksPerPage) {
@@ -101,7 +124,7 @@ public class BooksPage extends BasePage {
 
     public void clickBookStoreApplicationLink() {
         scrollToElementJS(bookStoreApplication);
-        click(bookStoreApplication);
+        bookStoreApplication.click();
     }
 
     public void clickProfileLink() {
@@ -109,61 +132,58 @@ public class BooksPage extends BasePage {
     }
 
     public void clickBookStoreAPILink() {
-        BookStoreAPILink.click();
+        bookStoreAPILink.click();
     }
 
-
     public int getCountOfAllRows() {
-
         return allRows.size();
     }
 
     public int getCountFoundBooks() {
         int count = 0;
         for (WebElement element : allRows) {
-            var x = element.getText();
-            if (!element.getText().equals("    ")) {
+            if (!element.getText().trim().isEmpty()) {
                 count++;
             }
         }
-
         return count;
     }
 
     public String getFoundBooks() {
         StringBuilder all = new StringBuilder();
         for (WebElement element : allRows) {
-            String x = element.getText();
-            if (!element.getText().equals("    ")) {
-                all.append(x).append("\n");
+            String text = element.getText().trim();
+            if (!text.isEmpty()) {
+                all.append(text).append("\n");
             }
         }
         return all.toString();
     }
 
     public String getAllFoundBooks() {
-        return allRows.getFirst().getText();
+        return allRows.get(0).getText();
     }
 
     public void searchBooksWithWord(String searchedBook) {
-        set(searchBox, searchedBook);
+        searchBox.clear();
+        searchBox.sendKeys(searchedBook);
     }
 
     public String noRowsFound() {
-        return find(noRowsFound).getText();
+        return noRowsFound.getText();
     }
 
     public boolean verifyLoginIsNotVisible() {
         WebDriverWait wait = new WebDriverWait(driver, Duration.ofSeconds(6));
         wait.until(ExpectedConditions.invisibilityOf(profileLink));
 
-        String classAttribute = find(collapseDiv).getDomAttribute("class");
+        String classAttribute = collapseDiv.getDomAttribute("class");
 
         return classAttribute.equals("element-list collapse show");
     }
 
     public boolean verifyLoginIsVisible() {
-        return find(bookStoreApplication).isDisplayed();
+        return bookStoreApplication.isDisplayed();
     }
 
     public void clickBookStoreLink() {
